# tungsten-tiger

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
assets/: CMakeLists.txt
assets/resources/: index.html
assets/shaders/: .gitignore
assets/shaders/bgfx/: CMakeLists.txt
assets/shaders/bgfx/line/: CMakeLists.txt  line.frag  makefile.bak  varying.def.sc  vs_line.sc
assets/shaders/bgfx/ul_texture/: CMakeLists.txt  texture.frag  texture.vert  ul_texture.frag  vs_texture.sc
docs/: CONTRIBUTING.md
include/: logo.hpp  main.hpp  specs.hpp
libs/: .gitignore
scripts/: conan_build.sh  conan_install.sh
src/: CMakeLists.txt  _src.cmake  main.cpp  main.hpp  sem_ver.cpp  sem_ver.hpp  specs.hpp  system_types.hpp  tungsten_tiger.cpp  tungsten_tiger.hpp
src/core/: CMakeLists.txt  _core.cmake  macro.hpp  string.cpp  string.hpp  string_algo.hpp  string_fixed.hpp  string_fixed.inl  string_util.hpp  string_util.inl  string_view.hpp  string_view.inl
src/core/renderer/: CMakeLists.txt  _renderer.cmake  components.hpp  draw_2d.cpp  draw_2d.hpp  material.hpp  renderer_2d.hpp  renderer_3d.hpp  renderer_state.cpp  renderer_state.hpp  shader.hpp  shader_stage.hpp  texture.hpp  texture_flags.cpp  texture_flags.hpp  texture_format.hpp  uniform_type.hpp  vertex_buffer_flags.hpp  vertex_layout.cpp  vertex_layout.hpp
src/core/renderer/memory/: CMakeLists.txt  allocation.hpp  allocator.cpp  allocator.hpp  memory_pool.cpp  memory_pool.hpp
src/core/renderer/ul/: CMakeLists.txt  _ul.cmake  file_system.cpp  file_system.hpp  gpu_dirver.cpp  gpu_dirver.hpp  surface.cpp  surface.hpp
src/platform/: CMakeLists.txt  _platform.cmake  linux.cpp  linux.hpp  platform.hpp  renderer.hpp  screen_overlay.hpp  sdl_renderer.cpp  sdl_renderer.hpp  ul_screen_overlay.cpp  ul_screen_overlay.hpp  windows.cpp  windows.hpp
